fixed the spacing of the job filters

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ p {
     display: flex;
     color: #667292;
     margin: .5rem;
-    /* border: 1px solid #505050; */
     border-radius: 1rem;
     box-shadow: 1px 1px 9px rgba(0, 0, 0, .1);
 }
@@ -104,7 +103,7 @@ p {
 
 .left {
     margin: 0;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
 }
 
 .main-container {
@@ -245,22 +244,16 @@ footer p {
         border-radius: 1rem;
     }
     
-    /* .main-container {
-        display: flex;
-        flex-direction: row;
-    } */
-    
     .filter {
         display: flex;
         flex-direction: column;
         align-items: left;
         color: #f1e3dd;
     }
-    
+
     .type {
-        margin: 0;
-        display: flex;
-        justify-content: flex-start;
+        margin: .5rem 0;
+        align-self: left;
     }
     
     .jobs {
@@ -284,13 +277,6 @@ footer p {
     .container {
         padding: 1rem;
     }
-
-    .filter button {
-        padding: 1rem;
-        margin: 1rem;
-        width: 80%;
-        cursor: pointer;
-    } 
 }
 
 @media (min-width: 1200px) {
